--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
       <h2>Our Team</h2>
       <ul>
         <li>
-          <img src="" alt="">
+          <img src="./images/mark.jpg" alt="Product Designer">
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </li>
         <li>
-          <img src="" alt="">
+          <img src="./images/tom.jpg" alt="Frontend Developer">
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
-          <img src="" alt="">
+          <img src="./images/camila.jpg" alt="Marketing">
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="" alt="">
+          <img src="./images/daniel.jpg" alt="UI Designer">
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </li>
