--- a/index.html
+++ b/index.html
@@ -9,20 +9,25 @@
 
 <body>
   <header> 
-    <a href="/"><span>WEB</span>STUDIO</a>
+    
     <nav>
+      <a href="./index.html">WebStudio</a>
       <ul>
         <li><a href="">Studio</a></li>
         <li><a href="">Portfolio</a></li>
         <li><a href="">Contacts</a></li>
       </ul>
     </nav>
-    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+    <address>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      </ul>
+    </address>
   </header>
   <main>
     <section>
-      <h1>Effective Solutions for Your Business</h1>
+      <h2>Effective Solutions for Your Business</h2>
       <button type="button">Order Service</button>
     </section>
     <section>
@@ -72,7 +77,7 @@
     </section>
   </main>
   <footer>
-    <a href="/"><span>WEB</span>STUDIO</a>
+    <a href="./index.html">WebStudio</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
   </footer>
 </body>
