--- a/index.html
+++ b/index.html
@@ -5,80 +5,120 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header> 
     
     <nav>
-      <a href="./index.html">WebStudio</a>
-      <ul>
-        <li><a href="">Studio</a></li>
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Contacts</a></li>
+      <a class="logo link" href="./index.html"><span class="accent">Web</span>Studio</a>
+      <ul class="list nav-list">
+        <li><a href="#studio" class="link">Studio</a></li>
+        <li><a href="#portfolio" class="link">Portfolio</a></li>
+        <li><a href="#contacts" class="link">Contacts</a></li>
       </ul>
     </nav>
     <address>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <ul class="list contacts-list">
+        <li class="concacts-list-item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="concacts-list-item"><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </address>
   </header>
   <main>
-    <section>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+    <section class="top-section">
+      <h1 class="section-title">Effective Solutions for Your Business</h1>
+      <button type="button" class="primary-btn">Order Service</button>
     </section>
-    <section>
-      <h2>Our Services</h2>
-      <ul>
+    <section class="services-section">
+      <h2 class="section-title">Our Services</h2>
+      <ul class="list">
         <li>
-          <h3>Strategy</h3>
-          <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+          <h3 class="list-title">Strategy</h3>
+          <p class="services-list-description">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
         </li>
         <li>
-          <h3>Punctuality</h3>
-          <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+          <h3 class="list-title">Punctuality</h3>
+          <p class="services-list-description">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
         </li>
         <li>
-          <h3>Diligence</h3>
-          <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+          <h3 class="list-title">Diligence</h3>
+          <p class="services-list-description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
         </li>
         <li>
-          <h3>Technologies</h3>
-          <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+          <h3 class="list-title">Technologies</h3>
+          <p class="services-list-description">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
         </li>
       </ul>
     </section>
-    <section>
-      <h2>Our Team</h2>
-      <ul>
-        <li>
+    <section class="team-section">
+      <h2 class="section-title">Our Team</h2>
+      <ul class="list">
+        <li class="team-card">
           <img src="./images/mark.jpg" alt="Product Designer" width="264">
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
+          <h3 class="list-title">Mark Guerrero</h3>
+          <p class="team-desctiption">Product Designer</p>
         </li>
-        <li>
+        <li class="team-card">
           <img src="./images/tom.jpg" alt="Frontend Developer" width="264">
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
+          <h3 class="list-title">Tom Ford</h3>
+          <p class="team-desctiption">Frontend Developer</p>
         </li>
-        <li>
+        <li class="team-card">
           <img src="./images/camila.jpg" alt="Marketing" width="264">
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
+          <h3 class="list-title">Camila Garcia</h3>
+          <p class="team-desctiption">Marketing</p>
         </li>
-        <li>
+        <li class="team-card">
           <img src="./images/daniel.jpg" alt="UI Designer" width="264">
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
+          <h3 class="list-title">Daniel Wilson</h3>
+          <p class="team-desctiption">UI Designer</p>
+        </li>
+      </ul>
+    </section>
+    <section class="portfolio">
+      <h2 class="section-title">Our Portfolio</h2>
+      <ul class="list tile-list">
+        <li class="tile">
+          <img src="./images/portfolio1.jpg" alt="portfolio 1 image" class="image" width="360" height="300">
+          <h3 class="list-title">Banking App</h3>
+          <p class="description">App</p>
+        </li>
+        <li class="tile">
+          <img src="./images/portfolio2.jpg" alt="portfolio 2 image" class="image" width="360" height="300">
+          <h3 class="list-title">Cashless Payment</h3>
+          <p class="description">Marketing</p>
+        </li>
+        <li class="tile">
+          <img src="./images/portfolio3.jpg" alt="portfolio 3 image" class="image" width="360" height="300">
+          <h3 class="list-title">Meditation App</h3>
+          <p class="description">App</p>
+        </li>
+        <li class="tile">
+          <img src="./images/portfolio4.jpg" alt="portfolio 4 image" class="image" width="360" height="300">
+          <h3 class="list-title">Meditation App</h3>
+          <p class="description">Marketing</p>
+        </li>
+        <li class="tile">
+          <img src="./images/portfolio5.jpg" alt="portfolio 5 image" class="image" width="360" height="300">
+          <h3 class="list-title">Screen Illustrations</h3>
+          <p class="description">Design</p>
+        </li>
+        <li class="tile">
+          <img src="./images/portfolio6.jpg" alt="portfolio 6 image" class="image" width="360" height="300">
+          <h3 class="list-title">Online Courses</h3>
+          <p class="description">Marketing</p>
         </li>
       </ul>
     </section>
   </main>
-  <footer>
-    <a href="./index.html">WebStudio</a>
+  <footer class="footer">
+    <a class="logo link" href="./index.html"><span class="accent">Web</span>Studio</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
   </footer>
 </body>
