--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header> 
     
     <nav>
-      <a class="logo link" href="./index.html"><span class="accent">Web</span>Studio</a>
+      <a class="logo link" href="./index.html">Web<span class="accent">Studio</span></a>
       <ul class="list nav-list">
-        <li><a href="#studio" class="link">Studio</a></li>
-        <li><a href="#portfolio" class="link">Portfolio</a></li>
-        <li><a href="#contacts" class="link">Contacts</a></li>
+        <li><a href="./index.html" class="link">Studio</a></li>
+        <li><a href="" class="link">Portfolio</a></li>
+        <li><a href="" class="link">Contacts</a></li>
       </ul>
     </nav>
-    <address>
+    <address class="contacts">
       <ul class="list contacts-list">
         <li class="concacts-list-item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li class="concacts-list-item"><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -62,22 +62,22 @@
         <li class="team-card">
           <img src="./images/mark.jpg" alt="Product Designer" width="264">
           <h3 class="list-title">Mark Guerrero</h3>
-          <p class="team-desctiption">Product Designer</p>
+          <p class="desctiption">Product Designer</p>
         </li>
         <li class="team-card">
           <img src="./images/tom.jpg" alt="Frontend Developer" width="264">
           <h3 class="list-title">Tom Ford</h3>
-          <p class="team-desctiption">Frontend Developer</p>
+          <p class="desctiption">Frontend Developer</p>
         </li>
         <li class="team-card">
           <img src="./images/camila.jpg" alt="Marketing" width="264">
           <h3 class="list-title">Camila Garcia</h3>
-          <p class="team-desctiption">Marketing</p>
+          <p class="desctiption">Marketing</p>
         </li>
         <li class="team-card">
           <img src="./images/daniel.jpg" alt="UI Designer" width="264">
           <h3 class="list-title">Daniel Wilson</h3>
-          <p class="team-desctiption">UI Designer</p>
+          <p class="desctiption">UI Designer</p>
         </li>
       </ul>
     </section>
@@ -91,7 +91,7 @@
         </li>
         <li class="tile">
           <img src="./images/portfolio2.jpg" alt="portfolio 2 image" class="image" width="360" height="300">
-          <h3 class="list-title">Cashless Payment</h3>
+          <h3 class="list-title">Taxi Service</h3>
           <p class="description">Marketing</p>
         </li>
         <li class="tile">
@@ -118,8 +118,8 @@
     </section>
   </main>
   <footer class="footer">
-    <a class="logo link" href="./index.html"><span class="accent">Web</span>Studio</a>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <a class="logo link" href="./index.html">Web<span class="accent">Studio</span></a>
+    <p class="footer-desctiption">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
   </footer>
 </body>
 
