more styles align

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700" rel="stylesheet">
 </head>
 
 <body>
@@ -91,7 +91,7 @@
         </li>
         <li class="tile">
           <img src="./images/portfolio2.jpg" alt="portfolio 2 image" class="image" width="360" height="300">
-          <h3 class="list-title">Taxi Service</h3>
+          <h3 class="list-title">Cashless Payment</h3>
           <p class="description">Marketing</p>
         </li>
         <li class="tile">
@@ -101,7 +101,7 @@
         </li>
         <li class="tile">
           <img src="./images/portfolio4.jpg" alt="portfolio 4 image" class="image" width="360" height="300">
-          <h3 class="list-title">Meditation App</h3>
+          <h3 class="list-title">Taxi Service</h3>
           <p class="description">Marketing</p>
         </li>
         <li class="tile">
