--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   </main>
   <footer class="footer">
     <a class="logo link" href="./index.html">Web<span class="accent">Studio</span></a>
-    <p class="footer-desctiption">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
   </footer>
 </body>
 
