--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./css/styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./css/styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700" rel="stylesheet">
@@ -14,112 +14,134 @@
 
 <body>
   <header> 
-    
-    <nav>
-      <a class="logo link" href="./index.html">Web<span class="accent">Studio</span></a>
-      <ul class="list nav-list">
-        <li><a href="./index.html" class="link">Studio</a></li>
-        <li><a href="" class="link">Portfolio</a></li>
-        <li><a href="" class="link">Contacts</a></li>
-      </ul>
-    </nav>
-    <address class="contacts">
-      <ul class="list contacts-list">
-        <li class="concacts-list-item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="concacts-list-item"><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
-    </address>
+    <div class="container">
+      <nav>
+        <a class="logo link" href="./index.html">Web<span class="accent">Studio</span></a>
+        <ul class="list nav-list">
+          <li><a href="./index.html" class="link">Studio</a></li>
+          <li><a href="" class="link">Portfolio</a></li>
+          <li><a href="" class="link">Contacts</a></li>
+        </ul>
+      </nav>
+      <address class="contacts">
+        <ul class="list contacts-list">
+          <li class="concacts-list-item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="concacts-list-item"><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
+    </div>
   </header>
   <main>
     <section class="top-section">
-      <h1 class="section-title">Effective Solutions for Your Business</h1>
-      <button type="button" class="primary-btn">Order Service</button>
+      <div class="container">
+        <h1 class="section-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="primary-btn">Order Service</button>
+      </div>
     </section>
     <section class="services-section">
-      <h2 class="section-title">Our Services</h2>
-      <ul class="list">
-        <li>
+      <div class="container">
+        <h2 class="section-title hidden">Our Services</h2>
+        <ul class="list">
+          <li>
           <h3 class="list-title">Strategy</h3>
-          <p class="services-list-description">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-        </li>
-        <li>
+            <p class="services-list-description">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+          </li>
+          <li>
           <h3 class="list-title">Punctuality</h3>
-          <p class="services-list-description">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-        </li>
-        <li>
+            <p class="services-list-description">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+          </li>
+          <li>
           <h3 class="list-title">Diligence</h3>
-          <p class="services-list-description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-        </li>
-        <li>
+            <p class="services-list-description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+          </li>
+          <li>
           <h3 class="list-title">Technologies</h3>
-          <p class="services-list-description">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-        </li>
-      </ul>
+            <p class="services-list-description">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+          </li>
+        </ul>
+      </div>
     </section>
     <section class="team-section">
-      <h2 class="section-title">Our Team</h2>
-      <ul class="list">
-        <li class="team-card">
-          <img src="./images/mark.jpg" alt="Product Designer" width="264">
-          <h3 class="list-title">Mark Guerrero</h3>
-          <p class="desctiption">Product Designer</p>
-        </li>
-        <li class="team-card">
-          <img src="./images/tom.jpg" alt="Frontend Developer" width="264">
-          <h3 class="list-title">Tom Ford</h3>
-          <p class="desctiption">Frontend Developer</p>
-        </li>
-        <li class="team-card">
-          <img src="./images/camila.jpg" alt="Marketing" width="264">
-          <h3 class="list-title">Camila Garcia</h3>
-          <p class="desctiption">Marketing</p>
-        </li>
-        <li class="team-card">
-          <img src="./images/daniel.jpg" alt="UI Designer" width="264">
-          <h3 class="list-title">Daniel Wilson</h3>
-          <p class="desctiption">UI Designer</p>
-        </li>
-      </ul>
+      <div class="container">
+        <h2 class="section-title">Our Team</h2>
+        <ul class="list">
+          <li class="team-card">
+            <img src="./images/mark.jpg" alt="Product Designer" width="264">
+            <div class="border-container"><h3 class="list-title">Mark Guerrero</h3>
+            <p class="desctiption">Product Designer</p>
+          </li>
+          <li class="team-card">
+            <img src="./images/tom.jpg" alt="Frontend Developer" width="264">
+            <div class="border-container"><h3 class="list-title">Tom Ford</h3>
+            <p class="desctiption">Frontend Developer</p>
+          </li>
+          <li class="team-card">
+            <img src="./images/camila.jpg" alt="Marketing" width="264">
+            <div class="border-container"><h3 class="list-title">Camila Garcia</h3>
+            <p class="desctiption">Marketing</p>
+          </li>
+          <li class="team-card">
+            <img src="./images/daniel.jpg" alt="UI Designer" width="264">
+            <div class="border-container"><h3 class="list-title">Daniel Wilson</h3>
+            <p class="desctiption">UI Designer</p>
+          </li>
+        </ul>
+      </div>
     </section>
     <section class="portfolio">
-      <h2 class="section-title">Our Portfolio</h2>
-      <ul class="list tile-list">
-        <li class="tile">
-          <img src="./images/portfolio1.jpg" alt="portfolio 1 image" class="image" width="360" height="300">
-          <h3 class="list-title">Banking App</h3>
-          <p class="description">App</p>
-        </li>
-        <li class="tile">
-          <img src="./images/portfolio2.jpg" alt="portfolio 2 image" class="image" width="360" height="300">
-          <h3 class="list-title">Cashless Payment</h3>
-          <p class="description">Marketing</p>
-        </li>
-        <li class="tile">
-          <img src="./images/portfolio3.jpg" alt="portfolio 3 image" class="image" width="360" height="300">
-          <h3 class="list-title">Meditation App</h3>
-          <p class="description">App</p>
-        </li>
-        <li class="tile">
-          <img src="./images/portfolio4.jpg" alt="portfolio 4 image" class="image" width="360" height="300">
-          <h3 class="list-title">Taxi Service</h3>
-          <p class="description">Marketing</p>
-        </li>
-        <li class="tile">
-          <img src="./images/portfolio5.jpg" alt="portfolio 5 image" class="image" width="360" height="300">
-          <h3 class="list-title">Screen Illustrations</h3>
-          <p class="description">Design</p>
-        </li>
-        <li class="tile">
-          <img src="./images/portfolio6.jpg" alt="portfolio 6 image" class="image" width="360" height="300">
-          <h3 class="list-title">Online Courses</h3>
-          <p class="description">Marketing</p>
-        </li>
-      </ul>
+      <div class="container">
+        <h2 class="section-title">Our Portfolio</h2>
+        <ul class="list tile-list">
+          <li class="tile">
+            <img src="./images/portfolio1.jpg" alt="portfolio 1 image" class="image" width="360" height="300">
+            <div class="border-container">
+              <h3 class="list-title">Banking App</h3>
+              <p class="description">App</p>
+            </div>
+          </li>
+          <li class="tile">
+            <img src="./images/portfolio2.jpg" alt="portfolio 2 image" class="image" width="360" height="300">
+            <div class="border-container">
+              <h3 class="list-title">Cashless Payment</h3>
+              <p class="description">Marketing</p>
+            </div>
+          </li>
+          <li class="tile">
+            <img src="./images/portfolio3.jpg" alt="portfolio 3 image" class="image" width="360" height="300">
+            <div class="border-container">
+              <h3 class="list-title">Meditation App</h3>
+            <p class="description">App</p>
+          </li>
+          <li class="tile">
+            <img src="./images/portfolio4.jpg" alt="portfolio 4 image" class="image" width="360" height="300">
+            <div class="border-container">
+              <h3 class="list-title">Taxi Service</h3>
+              <p class="description">Marketing</p>
+            </div>
+          </li>
+          <li class="tile">
+            <img src="./images/portfolio5.jpg" alt="portfolio 5 image" class="image" width="360" height="300">
+            <div class="border-container">
+                <h3 class="list-title">Screen Illustrations</h3>
+              <p class="description">Design</p>
+            </div>
+          </li>
+          <li class="tile">
+            <img src="./images/portfolio6.jpg" alt="portfolio 6 image" class="image" width="360" height="300">
+            <div class="border-container">
+                <h3 class="list-title">Online Courses</h3>
+              <p class="description">Marketing</p>
+            </div>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
   <footer class="footer">
-    <a class="logo link" href="./index.html">Web<span class="accent">Studio</span></a>
-    <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <div class="container">
+      <a class="logo link" href="./index.html">Web<span class="accent">Studio</span></a>
+      <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </div>
   </footer>
 </body>
 
