--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     </div>
   </header>
   <main>
-    <section class="top-section">
+    <section class="section top-section">
       <div class="container">
         <h1 class="section-title">Effective Solutions for Your Business</h1>
         <button type="button" class="primary-btn">Order Service</button>
       </div>
     </section>
-    <section class="services-section">
+    <section class="section services-section">
       <div class="container">
         <h2 class="section-title hidden">Our Services</h2>
         <ul class="list">
@@ -61,7 +61,7 @@
         </ul>
       </div>
     </section>
-    <section class="team-section">
+    <section class="section team-section">
       <div class="container">
         <h2 class="section-title">Our Team</h2>
         <ul class="list">
@@ -88,7 +88,7 @@
         </ul>
       </div>
     </section>
-    <section class="portfolio">
+    <section class="section portfolio">
       <div class="container">
         <h2 class="section-title">Our Portfolio</h2>
         <ul class="list tile-list">
@@ -120,14 +120,14 @@
             </div>
           </li>
           <li class="tile">
-            <img src="./images/portfolio5.jpg" alt="portfolio 5 image" class="image" width="360" height="300">
+            <img src="./images/portfolio6.jpg" alt="portfolio 5 image" class="image" width="360" height="300">
             <div class="border-container">
                 <h3 class="list-title">Screen Illustrations</h3>
               <p class="description">Design</p>
             </div>
           </li>
           <li class="tile">
-            <img src="./images/portfolio6.jpg" alt="portfolio 6 image" class="image" width="360" height="300">
+            <img src="./images/portfolio5.jpg" alt="portfolio 6 image" class="image" width="360" height="300">
             <div class="border-container">
                 <h3 class="list-title">Online Courses</h3>
               <p class="description">Marketing</p>
