align styles to tests

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-  <header> 
+  <header class="header"> 
     <div class="container">
-      <nav>
+      <nav class="nav">
         <a class="logo link" href="./index.html">Web<span class="accent">Studio</span></a>
         <ul class="list nav-list">
           <li><a href="./index.html" class="link">Studio</a></li>
@@ -40,21 +40,21 @@
     </section>
     <section class="section services-section">
       <div class="container">
-        <h2 class="section-title hidden">Our Services</h2>
+        <h2 class="section-title visually-hidden">Our Services</h2>
         <ul class="list">
-          <li>
+          <li class="list-item">
           <h3 class="list-title">Strategy</h3>
             <p class="services-list-description">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
           </li>
-          <li>
+          <li class="list-item">
           <h3 class="list-title">Punctuality</h3>
             <p class="services-list-description">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
           </li>
-          <li>
+          <li class="list-item">
           <h3 class="list-title">Diligence</h3>
             <p class="services-list-description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
           </li>
-          <li>
+          <li class="list-item">
           <h3 class="list-title">Technologies</h3>
             <p class="services-list-description">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
           </li>
@@ -67,23 +67,31 @@
         <ul class="list">
           <li class="team-card">
             <img src="./images/mark.jpg" alt="Product Designer" width="264">
-            <div class="border-container"><h3 class="list-title">Mark Guerrero</h3>
-            <p class="desctiption">Product Designer</p>
+            <div class="border-container">
+              <h3 class="list-title">Mark Guerrero</h3>
+              <p class="desctiption">Product Designer</p>
+            </div>
           </li>
           <li class="team-card">
             <img src="./images/tom.jpg" alt="Frontend Developer" width="264">
-            <div class="border-container"><h3 class="list-title">Tom Ford</h3>
-            <p class="desctiption">Frontend Developer</p>
+            <div class="border-container">
+              <h3 class="list-title">Tom Ford</h3>
+              <p class="desctiption">Frontend Developer</p>
+            </div>
           </li>
           <li class="team-card">
             <img src="./images/camila.jpg" alt="Marketing" width="264">
-            <div class="border-container"><h3 class="list-title">Camila Garcia</h3>
-            <p class="desctiption">Marketing</p>
+            <div class="border-container">
+              <h3 class="list-title">Camila Garcia</h3>
+              <p class="desctiption">Marketing</p>
+            </div>
           </li>
           <li class="team-card">
             <img src="./images/daniel.jpg" alt="UI Designer" width="264">
-            <div class="border-container"><h3 class="list-title">Daniel Wilson</h3>
-            <p class="desctiption">UI Designer</p>
+            <div class="border-container">
+              <h3 class="list-title">Daniel Wilson</h3>
+              <p class="desctiption">UI Designer</p>
+            </div>
           </li>
         </ul>
       </div>
@@ -110,7 +118,8 @@
             <img src="./images/portfolio3.jpg" alt="portfolio 3 image" class="image" width="360" height="300">
             <div class="border-container">
               <h3 class="list-title">Meditation App</h3>
-            <p class="description">App</p>
+              <p class="description">App</p>
+            </div>
           </li>
           <li class="tile">
             <img src="./images/portfolio4.jpg" alt="portfolio 4 image" class="image" width="360" height="300">
@@ -122,14 +131,14 @@
           <li class="tile">
             <img src="./images/portfolio6.jpg" alt="portfolio 5 image" class="image" width="360" height="300">
             <div class="border-container">
-                <h3 class="list-title">Screen Illustrations</h3>
+              <h3 class="list-title">Screen Illustrations</h3>
               <p class="description">Design</p>
             </div>
           </li>
           <li class="tile">
             <img src="./images/portfolio5.jpg" alt="portfolio 6 image" class="image" width="360" height="300">
             <div class="border-container">
-                <h3 class="list-title">Online Courses</h3>
+              <h3 class="list-title">Online Courses</h3>
               <p class="description">Marketing</p>
             </div>
           </li>
