add visually hidden

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </section>
     <section class="section services-section">
       <div class="container">
-        <h2 class="section-title visually-hidden">Our Services</h2>
+        <h2 class="visually-hidden" hidden>Our Services</h2>
         <ul class="list">
           <li class="list-item">
           <h3 class="list-title">Strategy</h3>
