--- a/index.html
+++ b/index.html
@@ -43,19 +43,39 @@
         <h2 class="visually-hidden" hidden>Our Services</h2>
         <ul class="list">
           <li class="list-item">
-          <h3 class="list-title">Strategy</h3>
+            <div class="adv-link-wrapper">
+              <svg class="adv-icon" aria-label="antenna" width="64" height="64">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
+            </div>
+            <h3 class="list-title">Strategy</h3>
             <p class="services-list-description">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
           </li>
           <li class="list-item">
-          <h3 class="list-title">Punctuality</h3>
+            <div class="adv-link-wrapper">
+              <svg class="adv-icon" aria-label="astronaut" width="64" height="64">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
+            </div>
+            <h3 class="list-title">Punctuality</h3>
             <p class="services-list-description">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
           </li>
           <li class="list-item">
-          <h3 class="list-title">Diligence</h3>
+            <div class="adv-link-wrapper">
+              <svg class="adv-icon" aria-label="clock" width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
+            </div>
+            <h3 class="list-title">Diligence</h3>
             <p class="services-list-description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
           </li>
           <li class="list-item">
-          <h3 class="list-title">Technologies</h3>
+            <div class="adv-link-wrapper">
+              <svg class="adv-icon" aria-label="diagram" width="64" height="64">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
+            </div>
+            <h3 class="list-title">Technologies</h3>
             <p class="services-list-description">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
           </li>
         </ul>
