--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="nav">
         <a class="logo link" href="./index.html">Web<span class="accent">Studio</span></a>
         <ul class="list nav-list">
-          <li><a href="./index.html" class="link">Studio</a></li>
+          <li><a href="./index.html" class="link current">Studio</a></li>
           <li><a href="" class="link">Portfolio</a></li>
           <li><a href="" class="link">Contacts</a></li>
         </ul>
@@ -256,6 +256,9 @@
         <ul class="list tile-list">
           <li class="tile">
             <img src="./images/portfolio1.jpg" alt="portfolio 1 image" class="image" width="360" height="300">
+            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task
+              Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+              · Cloud Storage App</p>
             <div class="border-container">
               <h3 class="list-title">Banking App</h3>
               <p class="description">App</p>
@@ -263,6 +266,9 @@
           </li>
           <li class="tile">
             <img src="./images/portfolio2.jpg" alt="portfolio 2 image" class="image" width="360" height="300">
+            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task
+              Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+              · Cloud Storage App</p>
             <div class="border-container">
               <h3 class="list-title">Cashless Payment</h3>
               <p class="description">Marketing</p>
@@ -270,6 +276,9 @@
           </li>
           <li class="tile">
             <img src="./images/portfolio3.jpg" alt="portfolio 3 image" class="image" width="360" height="300">
+            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task
+              Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+              · Cloud Storage App</p>
             <div class="border-container">
               <h3 class="list-title">Meditation App</h3>
               <p class="description">App</p>
@@ -277,6 +286,9 @@
           </li>
           <li class="tile">
             <img src="./images/portfolio4.jpg" alt="portfolio 4 image" class="image" width="360" height="300">
+            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task
+              Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+              · Cloud Storage App</p>
             <div class="border-container">
               <h3 class="list-title">Taxi Service</h3>
               <p class="description">Marketing</p>
@@ -284,6 +296,9 @@
           </li>
           <li class="tile">
             <img src="./images/portfolio6.jpg" alt="portfolio 5 image" class="image" width="360" height="300">
+            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task
+              Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+              · Cloud Storage App</p>
             <div class="border-container">
               <h3 class="list-title">Screen Illustrations</h3>
               <p class="description">Design</p>
@@ -291,6 +306,9 @@
           </li>
           <li class="tile">
             <img src="./images/portfolio5.jpg" alt="portfolio 6 image" class="image" width="360" height="300">
+            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task
+              Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+              · Cloud Storage App</p>
             <div class="border-container">
               <h3 class="list-title">Online Courses</h3>
               <p class="description">Marketing</p>
@@ -304,58 +322,39 @@
     <div class="container">
       <div>
         <a class="logo link" href="./index.html">Web<span class="accent">Studio</span></a>
-        <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing &
+        <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing
+          &
           growth solutions.</p>
       </div>
       <div class="footer-socials-container">
         <p class="footer-socials-subtitle">Social media</p>
         <ul class="footer-socials list">
           <li class="footer-socials-items">
-            <a
-              class="footer-socials-link"
-              href="https://www.instagram.com"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="Link to Instagram"
-            >
+            <a class="footer-socials-link" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"
+              aria-label="Link to Instagram">
               <svg class="footer-socials-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="footer-socials-items">
-            <a
-              class="footer-socials-link"
-              href="https://x.com"
-              target="_blank"
-              rel="noopener no-referrer"
-              aria-label="Link to Twitter"
-              ><svg class="footer-socials-icon" width="24" height="24">
+            <a class="footer-socials-link" href="https://x.com" target="_blank" rel="noopener no-referrer"
+              aria-label="Link to Twitter"><svg class="footer-socials-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="footer-socials-items">
-            <a
-              class="footer-socials-link"
-              href="https://facebook.com"
-              target="_blank"
-              rel="noopener no-referrer"
-              aria-label="Link to Facebook"
-            >
+            <a class="footer-socials-link" href="https://facebook.com" target="_blank" rel="noopener no-referrer"
+              aria-label="Link to Facebook">
               <svg class="footer-socials-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="footer-socials-items">
-            <a
-              class="footer-socials-link"
-              href="https://www.linkedin.com"
-              target="_blank"
-              rel="noopener no-referrer"
-              aria-label="Link to Linkedin"
-            >
+            <a class="footer-socials-link" href="https://www.linkedin.com" target="_blank" rel="noopener no-referrer"
+              aria-label="Link to Linkedin">
               <svg class="footer-socials-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
